# circular-cv

./: README.md  candidate.txt  circular.py  do_all.sh  pyproject.toml  replace_opencv-ver.py
circular_cv/: list_version.py
