[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "circular-cv"
description = "chcker for import cv2"
reeadme = "README.md"
version = "0.0.1"
authors = [
    {name = "katsunori-waragai", email="huyuhiko1128@gmail.com"},
    {name = "zhang chao", email = "zhang.chao@borgroid.co.jp"},
]

requires-python = ">= 3.8"

dependencies = [
    "numpy<2",
    "opencv-python>=3.4.18.65",
    "open3d>=0.16.0",
    "pillow>=10.1.0",
    "scikit-image",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.urls]
Repository = "https://github.com/katsunori-waragai/circular-cv"

[tool.setuptools]
packages = ["circular_cv"]

[tool.black]
line-length = 120
